Add -nocomm option and fix deprecated api in tau_multimerge
Former-commit-id: a69ab5bd75c69dd3f8684edcd4ccacb8c0b4e471